# pico_relay

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.sh  eclipse_defines  flash.c  flash.h  flash.sh  fsdb.c  fsdb.h  json.c  json.h  lwipopts.h  mbedtls_config.h  mbedtls_config_examples_common.h  mqtt.h  mqtt_client.c  network.c  network.h  password.h  relay.c  telegram.c  telegram.h  test.c
docs/: links.txt
docs/hall_sensor/: Hall-Sensor-code.7z
docs/hall_sensor/c/: CMakeLists.txt  main.c
docs/hall_sensor/c/examples/: CMakeLists.txt  Hall_Sensor_Test.h  Hall_Sensor_test.c
docs/hall_sensor/c/lib/Hall_Sensor/: CMakeLists.txt  Hall_Sensor.c  Hall_Sensor.h
docs/hall_sensor/c/uf2/: Hall_Sensor-test.uf2
